# tmux-windows

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  client.c  cmd-new-session.c  cmd-parse.c  cmd-parse.h  cmd-parse.y  cmd-paste-buffer.c  cmd-pipe-pane.c  cmd-queue.c  cmd-run-shell.c  cmd-source-file.c  cmd-suspend-pane.c  cmd.c  compat.h  file.c  format.c  input.c  job.c  log.c  mode-tree.c  popup.c  proc.c  screen-redraw.c  server-client.c  server.c  session.c  spawn.c  status.c  tmux-protocol.h  tmux.c  tmux.h  tty-keys.c  tty-term.c  tty.c  window.c
.github/workflows/: windows-build.yml
cmake/: config.h.in
compat/: check_macro.c  imsg-buffer.c  imsg.c  osdep-win32.c  tmux-compat.h  win32-clipboard.c  win32-dirent.c  win32-io.c  win32-job.c  win32-jobctl.c  win32-misc.c  win32-process.c  win32-pty.c  win32-regex.c  win32-regex.h  win32-session-log.c  win32-signal.c  win32-socket.c  win32-stubs.c  win32-term.c  win32-wcwidth.c  win32.h
compat/win32/: config.h  curses.h  err.h  fnmatch.h  glob.h  langinfo.h  libgen.h  paths.h  poll.h  pwd.h  regex.h  resolv.h  term.h  termios.h  unistd.h  util.h  vis.h
compat/win32-signal-proxy/: main.c
compat/win32/arpa/: inet.h  nameser.h
compat/win32/netinet/: in.h
compat/win32/sys/: file.h  ioctl.h  mman.h  param.h  resource.h  select.h  socket.h  time.h  uio.h  un.h  utsname.h  wait.h
docs/windows/: BUILDING.md  STARTUP_PERFORMANCE.md
installer/: tmux-windows.iss
tests/: test_native_shells.ps1
